--- a/ossec.conf
+++ b/ossec.conf
@@ -460,27 +460,29 @@
 
 <!-- Add to your ossec.conf -->
 <ossec_config>
-  <!-- Apache -->
-  <localfile>
-    <log_format>apache</log_format>
-    <location>/var/log/apache2/access.log</location>
-  </localfile>
+ <!-- Web Server Logs -->
 
-  <localfile>
-    <log_format>apache</log_format>
-    <location>/var/log/apache2/error.log</location>
-  </localfile>
+<!-- Apache -->
+<localfile>
+  <log_format>apache</log_format>
+  <location>/var/log/apache2/access.log</location>
+</localfile>
 
-  <!-- Nginx -->
-  <localfile>
-    <log_format>nginx</log_format>
-    <location>/var/log/nginx/access.log</location>
-  </localfile>
+<localfile>
+  <log_format>apache</log_format>
+  <location>/var/log/apache2/error.log</location>
+</localfile>
 
-  <localfile>
-    <log_format>nginx</log_format>
-    <location>/var/log/nginx/error.log</location>
-  </localfile>
+<!-- Nginx - Use syslog format -->
+<localfile>
+  <log_format>syslog</log_format>
+  <location>/var/log/nginx/access.log</location>
+</localfile>
+
+<localfile>
+  <log_format>syslog</log_format>
+  <location>/var/log/nginx/error.log</location>
+</localfile>
 
   <!-- Monitor web directories -->
   <syscheck>
